Add customUrlParameters field to email form

--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -460,3 +460,6 @@ mautic.email.stat.tooltip="Details may not match summary numbers if the contact 
 mautic.email.stat.simple.tooltip="Details may not match summary numbers if the contact no longer exists in your Mautic Account"
 mautic.email.associated.contacts="Contacts"
 mautic.email.segment.choice.generated_email_domain="Email Domain"
+mautic.email.custom_url_parameters.header="Custom URL Parameters for Links"
+mautic.email.custom_url_parameters.label="Key/Value List"
+mautic.email.custom_url_parameters.tooltip="Add additional URL parameters if needed, <key>=<value> format. If you need multiple parameters, concatenate them with &"
