--- a/app/bundles/EmailBundle/Translations/en_US/validators.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/validators.ini
@@ -5,3 +5,4 @@ mautic.email.variant.weight.notblank="Enter the percentage of recipients to rece
 mautic.email.api_key_required="API key is required."
 mautic.email.multiple_emails.not_valid="Provided emails are not valid: %email%"
 mautic.email.email_or_token.not_valid="Provided value '%value%' is not an email address nor a token build on a email field type. %details%"
+mautic.core.email.custom_url_parameters.regex="Provided value is not a valid key=value format."
